# mycelium

./: .env.example  .gitignore  Cargo.toml  DEPLOY.md  README.md  build-wasm.sh  deploy-gh-pages.sh  download.py  export-data.sh  index.html  pyproject.toml
.github/workflows/: deploy.yml
assets/: index-B9pThS_l.js  renderer_bg-CSQf2OUE.wasm
data/: gps_data.parquet
data/raw/: 9w_with_kevin.fit  activities_16926962795.fit  activities_16926962795.json  activities_16927057954.fit  activities_16927057954.json  activities_17084064192.fit  activities_17084064192.json  activities_17093139622.fit  activities_18497619227.fit  activities_18497619227.json  activities_18498346769.fit  activities_18498346769.json  activities_18525201258.fit  activities_18525201258.json  activities_18525209376.fit  activities_18525209376.json  activities_20262706779.fit  activities_20262706779.json  activities_20374652292.fit  activities_20374652292.json  activities_20614949982.json  activities_20621436910.fit  activities_20621436910.json  bike_around_nyc.fit  run__with_joe_2.fit  run_with_joe.fit
renderer/: Cargo.toml
renderer/src/: camera.rs  gpu.rs  lib.rs  main.rs  shader.wgsl  vertex.rs  wasm.rs
storage/: Cargo.toml
storage/examples/: verify_parquet.rs
storage/src/: ingestion.rs  lib.rs  main.rs  schema.rs  store.rs
web/: index.html  main.js  package-lock.json  package.json  vite.config.js
