[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
wgpu = "23.0"
winit = "0.30"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
log = "0.4"
env_logger = "0.11"
storage = { path = "../storage" }
glam = "0.29"
tokio = { workspace = true, features = ["rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document"] }
console_error_panic_hook = "0.1"
