[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
wgpu = "23.0"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
log = "0.4"
glam = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Desktop-only dependencies
winit = { version = "0.30", optional = true }
env_logger = { version = "0.11", optional = true }
storage = { path = "../storage", optional = true }
tokio = { workspace = true, features = ["rt"], optional = true }

[features]
default = ["desktop"]
desktop = ["winit", "env_logger", "storage", "tokio"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
] }
console_error_panic_hook = "0.1"
console_log = "1.0"
